--- a/styles.css
+++ b/styles.css
@@ -72,12 +72,29 @@ a.current {
 #menu-toggle:hover {
     background-color: ;
 }
+#menu-toggle div {
+    width: 50%;
+    height: 3px;
+    background-color: black;
+    margin: 4px auto;
+    transform: translateY(12px);
+    transition: all 0.3s;
+}
 #menu-toggle {
     width: 2em;
     height: 2em;
     background-color: ;
     border-radius: 2em;
     transition: all 0.3s;
+}
+#menu-toggle.open div.one {
+    transform: translateY(20px) rotate(0.125turn)
+}
+#menu-toggle.open div.two {
+    opacity: 0;
+}
+#menu-toggle.open div.three {
+    transform: translateY(6px) rotate(-0.125turn)
 }
 #menu-toggle div {
     width: 50%;
@@ -91,6 +108,10 @@ a.current {
     nav ul {
         flex-direction: row;
         transform: translateX(0);
+        opacity: 1;
+        height: auto;
+        width: auto;
+        transition: none;
     }
     #menu-toggle {
         opacity: 0;
